# Heartbeat

./: .gitignore  CMakeLists.txt  README.md
include/: dsp.h  gguf_loader.h  heartbeat.h  model.h  phonemizer.h
models/: .gitkeep
models/voices/: af_bella.hvp  af_heart.hvp  am_adam.hvp  am_michael.hvp  bf_alice.hvp  bf_emma.hvp  bm_daniel.hvp  bm_george.hvp  if_sara.hvp  im_nicola.hvp
scripts/: download_model.py  export_kokoro.py  export_voices.py  setup_dependencies.ps1
src/: dsp.cpp  gguf_loader.cpp  heartbeat.cpp  main.cpp  model.cpp  phonemizer.cpp
tests/: CMakeLists.txt  test_dsp.cpp  test_gguf_loader.cpp  test_integration.cpp  test_phonemizer.cpp
www/: app.js  index.html  style.css
